# gene2probe

./: .gitignore  LICENSE  README.md  gene2probe.py  gene2probe_env.yml  install.sh  pyproject.toml
gene2probe/: __init__.py  gene2probe.py
notebooks/: 001_make_blast_database.ipynb  002_make_exon_probes_XIST.ipynb  003_make_CDS_probes_RPS4Y1.ipynb  003_make_probes_for_custom_region_CD45RA.ipynb  004_make_probes_for_custom_sequence_GFP.ipynb  XXX_test_extra_features.ipynb
notebooks/.ipynb_checkpoints/: 004_make_probes_for_custom_sequence_GFP-checkpoint.ipynb
