[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gene2probe"
authors = [{name = "Ioannis Sarropoulos", email = "is10@sanger.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy>=1.20",
    "pandas>=2.0",
    "biopython>=1.8",
    "pybedtools>=0.10",
    "ipykernel"
]

[project.urls]
Home = "https://github.com/Teichlab/gene2probe"